<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Royal Enfield</string>
    <string name="re_name_logo_content_desc">re name logo</string>
    <string name="sign_up_button_content_desc">Sign up button</string>
    <string name="explore_rides_text_info">Explore rides</string>
    <string name="not_ready_to_sign_up_explore_the_app_info">Not ready to Sign Up? Explore the app.</string>
    <string name="not_ready_to_sign_up_continue_as_guest_info">Continue as a Guest</string>
    <string name="login_button_content_desc">login button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">LOGIN</string>
    <string name="signup_header">SIGN-UP</string>
    <string name="service_header">Servicing</string>
    <string name="facebook_app_id">436653927299141</string>
    <string name="fb_login_protocol_scheme">fb436653927299141</string>
    <string name="text_title_default">Title text</string>
    <string name="menu_button">menu_button</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_forgot_password_login">Forgot Password?</string>
    <string name="invalid_forgot">Please enter valid E-mail Id or Phone number</string>
    <string name="text_skip_for_now">Skip for now</string>
    <string name="text_login">Login</string>
    <string name="text_action_bar_title">Title</string>
    <string name="desc_login_header_re_logo">logo_re_header</string>
    <string name="text_do_not_have_an_re_account_sign_up">Do not have a Royal Enfield account? Sign-up</string>
    <string name="text_login_button_image_view">login button image view</string>
    <string name="text_incorrect_password">Incorrect password!</string>
    <string name="text_incorrect_username">Incorrect username!</string>
    <string name="text_version">Version :</string>
    <string name="skip">Skip</string>
    <string name="dont_remember"> Don\'t remember your password? Use Forgot Password to reset your password.</string>
<string name="not_use_country_code">Please do not include the country code or 0 when entering mobile number.</string>
    <string name="text_or">or</string>
    <string name="text_image_right_line">image right line</string>
    <string name="text_image_left_line">image left line</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_email_mobile_number">Email/Mobile Number</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login_screen_footer">login screen footer</string>
    <string name="text_hint_confirm_password">Confirm Password</string>
    <string name="text_hint_email_id_mobile_number">Email Id/Mobile number</string>
    <string name="text_hint_email_id_phone_number">Email ID/Phone number</string>
    <string name="text_btn_sign_up">Sign-up</string>
    <string name="inline_error_text">Shouldn\'t be empty</string>
    <string name="text_hint_mobile">Mobile Number</string>
    <string name="password_eye_img_desc">Password eye image</string>
    <string name="previous_arrow_image_desc">Previous arrow</string>
    <string name="calendar_image_desc">Calendar image</string>
    <string name="text_sign_up_info_already_a_member_login">Already a member?
        <u>Login</u>
    </string>
    <string name="text_btn_login">Login</string>
    <string name="text_error_enter_valid_user_id">Enter an email ID/mobile number</string>
    <string name="text_error_enter_username">Enter an email ID/mobile number</string>
    <string name="text_error_enter_password">Enter a password</string>
    <string name="yourprofile_header">Your profile</string>
    <string name="skip_header">Skip for now</string>
    <string name="text_upload_text">Upload your profile photo</string>
    <string name="rider_profile">RIDER PROFILE</string>
    <string name="editText_fullname">Full Name</string>
    <string name="editText_username">User Name</string>
    <string name="edittext_reclub">RE Club association</string>
    <string name="text_add_address">+ Add Address</string>
    <string name="text_motorcycleprofile">MOTORCYCLE PROFILE</string>
    <string name="text_upload_rider_photo">Upload your profile photo</string>
    <string name="text_upload_motorcycle_photo">Upload your motorcycle photo</string>
    <string name="edittext_yourmotorcycles">Your Motorcycles</string>
    <string name="text_add_motorcycle">+ Add New Motorcycle</string>
    <string name="edittext_motorcycle_registration">Motorcycle Registration Number</string>
    <string name="button_saveprofile">Save Profile</string>
    <string-array name="motorcycle_profile">
        <item>Your Motorcycle</item>
    </string-array>
    <string name="take_photo">Take Photo</string>
    <string-array name="profile_rides">
        <item>Your Motorcycle</item>
    </string-array>
    <string-array name="profile_rides_types">
        <item>Pending Rides</item>
        <item>Upcoming Rides</item>
        <item>Past Rides</item>
        <item>Rejected Rides</item>
    </string-array>
    <string name="splash_prime">PRIME</string>
    <string name="text_global_submit_button">Submit</string>
    <string name="re_text_logo_img_desc">RE text logo image</string>
    <string name="road_image_desc">Road image</string>
    <string name="bike_image_desc">Bike image</string>
    <string name="text_forgot_password_label_email_id_phone_number">Enter Email/Mobile Number</string>
    <string name="text_hint_enter_new_password">Enter new password</string>
    <string name="text_hint_enter_otp">Enter OTP</string>
    <string name="text_hint_enter_otp_password">Enter one time password\u0020(OTP)</string>
    <string name="text_message_otp_sent_success">OTP Sent Successfully!</string>
    <string name="text_otp_not_received_link">Still not received?\u0020</string>
    <string name="text_otp_resend_link">Resend OTP</string>
    <string name="text_back_arrow">back arrow</string>
    <string name="text_hint_first_name">First Name</string>
    <string name="text_hint_last_name">Last Name</string>
    <string name="text_hint_email">Email ID</string>
    <string name="text_hint_phone">Phone Number</string>
    <string name="text_next">Next</string>
    <string name="text_already_member">If you are already registered with us on our website or our online store, please use the same credentials to </string>
    <string name="text_error_password">Enter Password</string>
    <string name="text_valid_email_error">Enter a valid Email Id</string>
    <string name="text_valid_phone_error">Enter a valid Phone Number</string>
    <string name="text_previous">Previous</string>
    <string name="text_hint_city">City</string>
    <string name="text_hint_date">Date of birth</string>
    <string name="text_hint_gender">Gender:</string>
    <string name="text_hint_male">Male</string>
    <string name="text_hint_female">Female</string>
    <string name="text_own_re">Do you own a Royal Enfield Motorcycle</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_policies_conditions">I accept the </string>
    <string name="text_privacy_policies">privacy policy</string>
    <string name="text_privacy_policies_camel">Privacy Policy</string>
    <string name="text_and">\u0020as well as\u0020</string>
    <string name="signup_success">Signup Success</string>
    <string name="text_terms_conditions">terms and conditions</string>
    <string name="text_enter_otp">Enter OTP</string>
    <string name="text_enter_new_password">Enter new password</string>
    <string name="text_enter_confirm_password">Enter Confirm password</string>
    <string name="customalert_title">Alert!</string>
    <string name="customalert_title1">Alert</string>
    <string name="customalert_ok">OK</string>
    <string name="text_password_mismatch">Password mismatch</string>
    <string name="text_servicecenter_offline_title">Service Centre Offline</string>
    <string name="text_servicecenter_offline_msg">We regret to inform that the service station chosen is unable to accept your service booking online. Please call to book your slot. Thank you for your understanding.</string>
    <string name="title_add_address">Add Address</string>
    <string name="text_your_address">Your address:</string>
    <string name="button_text_add_address">Add this Address</string>
    <string name="hint_add_address">Click to add Address</string>
    <string name="hint_add_flat">Add flat number/house no. etc&#8230;</string>
    <string name="text_address_title">Address:</string>
    <string name="edittext_hint_address">Address</string>
    <string name="edittext_hint_locality">Locality</string>
    <string name="edittext_hint_street">Street</string>
    <string name="edittext_hint_city">City</string>
    <string name="edittext_hint_pincode">Pincode</string>
    <string name="edittext_hint_state">State</string>
    <string name="text_usecurrentlocation">Use Current Location</string>
    <string name="button_address_save">Save address</string>
    <string name="text_label_name_your_motorcycle">Your Motorcycle:</string>
    <string name="text_label_name_purchase_date">Purchase date:</string>
    <string name="text_label_name_color">Color:</string>
    <string name="text_label_name_year_of_manufacture">Year of manufacture:</string>
    <string name="text_label_name_engine_number">Engine Number:</string>
    <string name="text_label_name_last_serviced">Last Serviced:</string>
    <string name="text_view_service_history">View service history</string>
    <string name="text_register_other_motorcycle">Register other motorcycle:</string>
    <string name="text_visit_nearest_service_center">Visit nearest service centre</string>
    <string name="text_reemail_send">email to: \ndnait@royalenfield.com</string>
    <string name="text_close_profile_image">close profile image</string>
    <string name="text_edit_profile">edit profile</string>
    <string name="image_camera_add">camera add</string>
    <string name="tab_text_motorcycle">Motorcycle</string>
    <string name="tab_text_motorcycles">Motorcycles</string>
    <string name="city">City</string>
    <string name="tab_motorcycle">Motorcycle</string>
    <string name="tab_re_community">Home</string>
    <string name="tab_re_rides">Rides</string>
    <string name="tab_make_your_own">Make Your Own</string>
    <string name="tab_re_navigate">Navigate</string>
    <string name="cross_btn">Cross button</string>
    <string name="success_msg">Success message</string>
    <string name="show_motorcycle">Show Motorcycles</string>
    <string name="details_validation_msg">You already have 5 Motorcycles linked to your mobile number</string>
    <string name="confirm">Confirm</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="resend">Resend in 60 secs</string>
    <string name="cancel">Cancel</string>
    <string name="state">State</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="turn_off">Turn Off</string>
    <string name="confirmation_turn_off_location">Turning this feature off will not give you access to the live parameters visible on your motorcycle page.</string>
    <string name="choose_your_state_and_city">Choose your State and City</string>
    <string name="text_calibrate_title">Calibrate your blue\ndot\'s compass</string>
    <string name="text_calibrate_desc">Tilt and move your phone 3 times\nlike this:</string>
    <string name="text_calibrate_accuracy">Compass accuracy:</string>
    <string name="text_done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="otp_sent_mobile_email">One time password has been sent to your email address and mobile number. Please enter the OTP received.</string>
</resources>