<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_community"
        android:icon="@drawable/home_selector"
        android:title="@string/tab_re_community" />
    <item
        android:id="@+id/item_rides"
        android:icon="@drawable/ride_selector"
        android:title="@string/tab_re_rides" />


    <item
        android:id="@+id/item_motorcycle"
        android:icon="@drawable/motorcycle_selector"
        android:title="@string/tab_motorcycle" />
    <item
        android:id="@+id/item_navigate"
        android:icon="@drawable/navigate_selector"
        android:title="@string/tab_re_navigate" />
    <item
        android:id="@+id/item_configuration"
        android:icon="@drawable/store_selector"
        android:title="@string/tab_make_your_own"

        />

</menu>