<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/black_two">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_94"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26"/>
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/otp_sent_mobile_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_94"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
        app:layout_constraintBottom_toTopOf="@id/edit_enter_otp" />

    <EditText
            android:id="@+id/edit_enter_otp"
            style="@style/REEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_edit_field_enter_otp_height"
            android:ems="10"
            android:hint="@string/text_hint_enter_otp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_94"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_28"/>

    <EditText
            android:id="@+id/edit_enter_new_password"
            style="@style/REEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_edit_field_enter_otp_height"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/text_hint_enter_new_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_94"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_otp"/>

    <EditText
            android:id="@+id/edit_enter_confirm_password"
            style="@style/REEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_edit_field_enter_otp_height"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/text_hint_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_94"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_new_password"/>

    <TextView
            android:id="@+id/text_otp_sent_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_94"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/text_resend_otp_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_56sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_79"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_21"
        app:layout_constraintTop_toBottomOf="@+id/edit_enter_confirm_password">

        <TextView
            android:id="@+id/txv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="50"
            android:paddingBottom="5dp"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_50" />

    </LinearLayout>

    <Button
            android:id="@+id/button_submit_reset_password"
            style="@style/REButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/text_global_submit_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_79"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_21"
            app:layout_constraintTop_toBottomOf="@+id/text_resend_otp_link"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.21"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_79"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.79"/>

    <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/text_back_arrow"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow"/>

    <TextView
            android:id="@+id/tv_otp_inline_error"
            style="@style/TextViewInlineErrorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/text_enter_otp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_otp"/>

    <TextView
            android:id="@+id/tv_new_pwd_inline_error"
            style="@style/TextViewInlineErrorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/text_enter_new_password"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_new_password"/>

    <TextView
            android:id="@+id/tv_confirm_pwd_inline_error"
            style="@style/TextViewInlineErrorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/text_enter_confirm_password"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_6"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_confirm_password"/>
</androidx.constraintlayout.widget.ConstraintLayout>
